--- a/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
+++ b/frontend/src/app/modules/features/common/find-candidates/find-candidates.component.html
@@ -47,7 +47,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col-lg-7">
-                      <a href="javascript:;">
+                      <a href="javascript:;" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: item?.id}">
                         <h5 class="text-capitalize">
                           <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
                           <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
