--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-view/employer-candidate-profile-view.component.html
@@ -19,106 +19,122 @@
       <div class="col-lg-8 col-md-12">
         <div class="row">
           <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="candidate-job-view.html">
-                      <h5>Jacky Smith <small> - Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right">
-                    <span>
-                      <a class="btn btn-outline-blue btn-sm mr-1" (click)="onToggleResumeForm(true)">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span>
-                      <a class="btn btn-outline-orange btn-sm" (click)="onToggleSendMail(true)" >
-                      <i class="fas fa-paper-plane"></i> Send Mail</a>
-                    </span>
-                  </div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img.jpg">
-                  <div class="media-body">
-                    <h6>+91 9876543210 / 9876543222</h6>
-                    <h6><a href="mailto:peter-parker2010@gmail.com">jacky-smith2010@gmail.com</a> </h6>
-                    <h6 class="mb-0">Austin, TX, USA</h6>
-                  </div>
-                </div>
-              </div>
-            </div>
+            <app-contact-card
+            [userInfo]="userDetails"
+            [isEdit]="false"
+            [isResume]="true"
+            [isMail]="true"
+            >
+            </app-contact-card>
+
           </div>
         </div>
         <div class="row mt-3 info-box">
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class="list-group-item">Total Years of Experience</li>
-              <li class="list-group-item">Total SAP Experience</li>
-              <li class="list-group-item">Domains Worked</li>
-              <li class="list-group-item">Hands on Experience</li>
+              <li class=" list-group-item text-capitalize">{{"dashboard.totalYearsOfExp" | translate }}</li>
+              <li class=" list-group-item text-capitalize">{{"dashboard.totalSapExp" | translate }}</li>
+              <li class=" list-group-item text-capitalize">{{"postJob.domainExperience" | translate }}</li>
+              <li class=" list-group-item text-capitalize">{{"postJob.handsOnWith" | translate }}</li>
             </ul>
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class="list-group-item">8+ Years</li>
-              <li class="list-group-item">5+ Years</li>
-              <li class="list-group-item">Automotive, Logistics, Finance</li>
-              <li class="list-group-item">SAP PM, SAP MM, SAP Mobility</li>
+              <li class="list-group-item text-capitalize">{{userDetails?.experience}} Years</li>
+            <li class="list-group-item text-capitalize">{{userDetails?.sap_experience}} Years</li>
+            <li class="list-group-item text-capitalize">{{sharedService.onFindDomainFromID(userDetails?.domains_worked)}}</li>
+            <li class="list-group-item text-uppercase">
+              <ng-container *ngIf="userDetails?.hands_on_experience?.length; else elseHandsTemplate">
+                <p class="m-0 w-100 float-left" *ngFor="let item of userDetails?.hands_on_experience">
+                  <span class="text-wrap-custom float-left">{{item?.skill_id ? sharedService.onFindSkillsFromSingleID(item?.skill_id)?.tag : '--'}}</span>
+                  <span *ngIf="item?.skill_id">({{item?.experience + ' ' + item?.exp_type}})</span>
+                </p>
+              </ng-container>
+              <ng-template #elseHandsTemplate>
+                <p>--</p>
+              </ng-template>
+            </li>
             </ul>
           </div>
 
           <div class="col-lg-12 border-top pt-3">	</div>
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class="list-group-item">Knowledge on</li>
-              <li class="list-group-item">Programming Skills</li>
-              <li class="list-group-item">Nice to have</li>
-              <li class="list-group-item">Certifications</li>
+              <li class="list-group-item lg-mh-40 text-capitalize">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
+                <li class="list-group-item text-capitalize">{{"postJob.programmingSkills" | translate }}</li>
+                <li class="list-group-item text-capitalize">{{"postYourResume.others" | translate }}</li>
+                <li class="list-group-item text-capitalize">{{"postJob.certification" | translate }}</li>
+                <li class="list-group-item text-capitalize">{{"postJob.endToEndImplementation" | translate }}</li>
             </ul>
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class="list-group-item">SAP Mobility, SAP FICO</li>
-              <li class="list-group-item">Java, Python</li>
-              <li class="list-group-item">Python, SAP BODS</li>
-              <li class="list-group-item">SAP Mobility</li>
+              <li class="list-group-item text-uppercase lg-mh-40">
+                <ng-container *ngIf="userDetails?.skills?.length; else elseSkillsTemplate">
+                  <p class="m-0 w-100 float-left" *ngFor="let item of userDetails?.skills">
+                    <span class="text-wrap-custom float-left">{{item ? sharedService.onFindSkillsFromSingleID(item)?.tag: '--'}}</span>
+                  </p>
+                </ng-container>
+                <ng-template #elseSkillsTemplate>
+                  <p>--</p>
+                </ng-template>
+              </li>
+              <li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(userDetails?.programming_skills)}} </li>
+              <li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(userDetails?.other_skills)}}</li>
+              <li class="list-group-item text-capitalize">{{utilsHelperService.onConvertArrayToString(userDetails?.certification)}}</li>
+              <li class="list-group-item text-capitalize">{{userDetails?.end_to_end_implementation ? userDetails?.end_to_end_implementation : '--'}}</li>
             </ul>
           </div>
 
           <div class="col-lg-12 border-top pt-3">	</div>
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class="list-group-item">Clients worked with</li>
-              <li class="list-group-item">Job Type</li>
-              <li class="list-group-item">Roles Looking for</li>
-              <li class="list-group-item">Remote</li>
+              <li class="list-group-item text-capitalize">{{"postYourResume.previousEmployers" | translate}}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.jobType" | translate}}</li>
+              <li class="list-group-item text-capitalize">{{"postYourResume.rolesLookingFor" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.remote" | translate }}</li>
             </ul>
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class="list-group-item">Google, SAP</li>
-              <li class="list-group-item">Full Time, Part Time, Freelancer</li>
-              <li class="list-group-item">Senior Consultant</li>
-              <li class="list-group-item">Yes</li>
+              <li class="list-group-item text-capitalize">
+                {{utilsHelperService.onConvertArrayToString(userDetails?.clients_worked)}}
+              </li>
+              <li class="list-group-item text-capitalize">
+                {{(userDetails?.job_type || userDetails?.job_type == 0) ? sharedService.onGetJobType(userDetails?.job_type) : '--'}}
+              </li>
+              <li class="list-group-item text-capitalize">
+                {{userDetails?.job_role ? userDetails?.job_role : '--'}}
+              </li>
+              <li class="list-group-item text-capitalize">
+                {{utilsHelperService.onGetYesOrNoValue(userDetails?.remote_only)}}
+              </li>
             </ul>
           </div>
 
           <div class="col-lg-12 border-top pt-3">	</div>
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class="list-group-item">Start Time</li>
-              <li class="list-group-item">Work Visa</li>
-              <li class="list-group-item">Travel</li>
-              <li class="list-group-item">Willing to Relocate</li>
+              <li class="list-group-item text-capitalize">{{"postJob.availableIn" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.workAuthorization" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.travel" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.willingToRelocate" | translate }}</li>
             </ul>
           </div>
           <div class="col-lg-8 info">
             <ul class="list-group">
-              <li class="list-group-item">30 Days</li>
-              <li class="list-group-item">H1B</li>
-              <li class="list-group-item">No</li>
-              <li class="list-group-item">Yes</li>
+              <li class="list-group-item">
+                {{(userDetails?.availability || userDetails?.availability == 0) ? (userDetails?.availability == 0 ? 'Immediate' : userDetails?.availability + ' Days') : '--'}}
+              </li>
+              <li class="list-group-item">
+                {{(userDetails?.work_authorization || userDetails?.work_authorization == 0) ? (userDetails?.work_authorization == 0 ? ("postYourResume.iHaveWorkAuthorization" | translate) : ("postYourResume.iNeedVisaAponsorship" | translate)) : '--'}}
+              </li>
+               <li class="list-group-item">
+                {{(userDetails?.travel || userDetails?.travel == 0) ? userDetails?.travel == 0 ? 'No' : userDetails?.travel + '%' : '--'}}
+              </li>
+              <li class="list-group-item">
+                {{utilsHelperService.onGetYesOrNoValue(userDetails?.willing_to_relocate)}}
+              </li>
             </ul>
           </div>
         </div>
