--- a/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/candidate-review-modal/candidate-review-modal.component.html
@@ -62,10 +62,10 @@
 			<div class="row mt-3 info-box">
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item">{{"postJob.totalYearsOfExperience" | translate }}</li>
-              <li class="list-group-item">{{"postJob.totalYearsOfSapExperience" | translate }}</li>
-              <li class="list-group-item">{{"dashboard.domainsWorked" | translate }}</li>
-              <li class="list-group-item">{{"postYourResume.handsOnExperience" | translate }}</li>
+					  <li class="list-group-item text-capitalize">{{"postJob.totalYearsOfExperience" | translate }}</li>
+            <li class="list-group-item text-capitalize">{{"postJob.totalYearsOfSapExperience" | translate }}</li>
+            <li class="list-group-item text-capitalize">{{"dashboard.domainsWorked" | translate }}</li>
+            <li class="list-group-item text-capitalize">{{"postYourResume.handsOnExperience" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
@@ -85,11 +85,11 @@
 				<div class="col-lg-12 border-top pt-3">	</div>
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item lg-mh-40">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
-              <li class="list-group-item">{{"postJob.programmingSkills" | translate }}</li>
-              <li class="list-group-item">{{"postYourResume.others" | translate }}</li>
-              <li class="list-group-item">{{"postJob.certification" | translate }}</li>
-              <li class="list-group-item">{{"postJob.endToEndImplementation" | translate }}</li>
+					  <li class="list-group-item lg-mh-40 text-capitalize">{{"postJob.knowledgeOnOtherSapSkills" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.programmingSkills" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postYourResume.others" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.certification" | translate }}</li>
+              <li class="list-group-item text-capitalize">{{"postJob.endToEndImplementation" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
@@ -109,10 +109,10 @@
 				<div class="col-lg-12 border-top pt-3">	</div>
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
-					  <li class="list-group-item">{{"postYourResume.clientsWorkedWith" | translate}}</li>
-            <li class="list-group-item">{{"postJob.jobType" | translate}}</li>
-            <li class="list-group-item">{{"postYourResume.rolesLookingFor" | translate }}</li>
-            <li class="list-group-item">{{"postJob.remote" | translate }}</li>
+					  <li class="list-group-item text-capitalize">{{"postYourResume.previousEmployers" | translate}}</li>
+            <li class="list-group-item text-capitalize">{{"postJob.jobType" | translate}}</li>
+            <li class="list-group-item text-capitalize">{{"postYourResume.rolesLookingFor" | translate }}</li>
+            <li class="list-group-item text-capitalize">{{"postJob.remote" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
@@ -136,9 +136,9 @@
 				<div class="col-lg-4 caption">
 					<ul class="list-group">
 					  <li class="list-group-item">{{"postJob.availableIn" | translate }}</li>
-              <li class="list-group-item">{{"postJob.workAuthorization" | translate }}</li>
-              <li class="list-group-item">{{"postJob.travel" | translate }}</li>
-              <li class="list-group-item">{{"postJob.willingToRelocate" | translate }}</li>
+            <li class="list-group-item">{{"postJob.workAuthorization" | translate }}</li>
+            <li class="list-group-item">{{"postJob.travel" | translate }}</li>
+            <li class="list-group-item">{{"postJob.willingToRelocate" | translate }}</li>
 					</ul>
 				</div>
 				<div class="col-lg-8 info">
