--- a/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
+++ b/frontend/src/app/modules/features/user/profile/user-profile/user-profile.component.html
@@ -138,7 +138,7 @@
           <div class="col-lg-12 border-top pt-3"> </div>
           <div class="col-lg-4 caption">
             <ul class="list-group">
-              <li class="list-group-item">{{"postYourResume.clientsWorkedWith" | translate}}</li>
+              <li class="list-group-item">{{"postYourResume.previousEmployers" | translate}}</li>
               <li class="list-group-item">{{"postJob.jobType" | translate}}</li>
               <li class="list-group-item">{{"postYourResume.rolesLookingFor" | translate }}</li>
               <li class="list-group-item">{{"postJob.remote" | translate }}</li>
