--- a/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
+++ b/frontend/src/app/modules/features/user/user-dashboard/user-dashboard.component.html
@@ -33,35 +33,35 @@
       <div class="col-lg-12">
         <ul class="nav">
           <li class="nav-item">
-            <a (click)="onTabChange({tabName: 'Profile', tabNumber: 1})"
+            <a (click)="onTabChange({tabName: 'profile', tabNumber: 1})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 1}" class="nav-link" href="javascript:;">
               {{"dashboard.profile" | translate}}
             </a>
           </li>
           <li class="nav-item">
-            <a (click)="onTabChange({tabName: 'Matches', tabNumber: 2})"
+            <a (click)="onTabChange({tabName: 'matches', tabNumber: 2})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 2}" class="nav-link" href="javascript:;">{{"dashboard.matches" | translate}}
               <small>(39)</small></a>
           </li>
           <li class="nav-item">
-						<a (click)="onTabChange({tabName: 'Visa Sponsored', tabNumber: 3})"
+						<a (click)="onTabChange({tabName: 'visaSponsored', tabNumber: 3})"
             [ngClass]="{'active': currentTabInfo.tabNumber == 3}" class="nav-link" href="javascript:;">
             {{"dashboard.visaSponsored" | translate}}  <small>(28)</small></a>
 					  </li>
           <li class="nav-item">
-            <a (click)="onTabChange({tabName: 'Applied', tabNumber: 4})"
+            <a (click)="onTabChange({tabName: 'applied', tabNumber: 4})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 4}" class="nav-link" href="javascript:;">
               {{"dashboard.applied" | translate}}
               <small>(12)</small></a>
           </li>
           <li class="nav-item">
-            <a (click)="onTabChange({tabName: 'Shortlisted', tabNumber: 5})"
+            <a (click)="onTabChange({tabName: 'shortlisted', tabNumber: 5})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 5}" class="nav-link" href="javascript:;">
               {{"dashboard.shortlisted" | translate}}
               <small>(07)</small></a>
           </li>
           <li class="nav-item">
-            <a (click)="onTabChange({tabName: 'Resume', tabNumber: 6})"
+            <a (click)="onTabChange({tabName: 'resume', tabNumber: 6})"
               [ngClass]="{'active': currentTabInfo.tabNumber == 6}" class="nav-link" href="javascript:;">
               {{"dashboard.resume" | translate}}</a>
           </li>
