--- a/frontend/src/app/modules/features/common/find-jobs/find-jobs.component.html
+++ b/frontend/src/app/modules/features/common/find-jobs/find-jobs.component.html
@@ -75,7 +75,11 @@
         <ng-template #elseTemplate>
           <p>No Jobs Found</p>
         </ng-template>
-
+        <div class="d-flex justify-content-center" *ngIf="((postedJobMeta?.count > 0 && postedJobMeta?.total > 25) && (postedJobMeta?.total != postedJobs?.length))">
+          <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
+            Load More
+          </button>
+        </div>
 
       </div>
 
