--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -63,7 +63,69 @@
             </form>
           </div>
         </div>
-        <div class="row mt-4 mb-4">
+        <ng-container *ngIf="userList?.length; else elseTemplate">
+          <div class="row mt-4 mb-4" *ngFor="let item of userList; let i=index">
+            <div class="col-lg-12">
+              <div class="card job-card">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-lg-7">
+                      <a href="javascript:;" [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: item?.id}">
+                        <h5 class="text-capitalize">
+                          <span>{{(item?.first_name ? item?.first_name : '') + ' ' + (item?.last_name ? item?.last_name : '')}}</span>
+                          <small *ngIf="item?.job_role"> - {{item?.job_role}}</small>
+                        </h5>
+                      </a>
+                    </div>
+                    <div class="col-lg-5 text-right">
+                      <span data-toggle="modal" data-target="#exampleModal">
+                        <a class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
+                        <i class="fas fa-file-alt"></i> Resume</a>
+                      </span>
+                      <span data-toggle="modal" data-target="#hireNow">
+                        <a class="btn btn-outline-orange btn-sm" href="javascript:;">
+                        <i class="fas fa-paper-plane"></i> Mail</a>
+                      </span>
+                    </div>
+                  </div>
+                  <div class="media">
+                    <img [src]="item?.photo ? (item?.photo) : 'assets/images/user-img-icon.jpg'">
+                    <!-- <img src="assets/images/user-img.jpg"> -->
+                    <div class="media-body">
+                      <h6 class="text-capitalize">
+                        {{item?.city ? item?.city : ''}}
+                        {{item?.state ? ', ' + item?.state : ''}}
+                        {{item?.country ? ', ' + item?.country : ''}}
+                      </h6>
+                      <h6>{{item?.experience ? 'Total Years Exp: ' + item?.experience : ''}}
+                        <span *ngIf="item?.sap_experience">, {{item?.sap_experience ? 'SAP Exp: ' + item?.sap_experience : ''}}</span>
+                      </h6>
+                      <h6 *ngIf="item?.job_type">{{item?.job_type ? sharedService.onGetJobType(item?.job_type) : ''}}</h6>
+                      <h6 *ngIf="item?.availability || item?.availability == 0">
+                       Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
+                      </h6>
+                      <div class="mt-2">
+                        <ng-container *ngFor="let itemSub of item?.hands_on_experience">
+                          <span *ngIf="itemSub.skill_id" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub.skill_id).tag)}}</span>
+                        </ng-container>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+        <ng-template #elseTemplate>
+          <p>No candidates available</p>
+        </ng-template>
+
+        <div class="d-flex justify-content-center" *ngIf="((userMeta?.count > 0 && userMeta?.total > 25) && (userMeta?.total != userList?.length))">
+          <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
+            Load More
+          </button>
+        </div>
+        <!-- <div class="row mt-4 mb-4">
           <div class="col-lg-12">
             <div class="card job-card">
               <div class="card-body">
@@ -99,264 +161,7 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>Balasubramanian <small> - Jr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img2.jpg">
-                  <div class="media-body">
-                    <h6>6+ Yrs Experience , L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>Sindhu Gangadharan <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img3.jpg">
-                  <div class="media-body">
-                    <h6>8+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>James Robert <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img4.jpg">
-                  <div class="media-body">
-                    <h6>7+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span>  <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>Jacky Smith <small> - Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img.jpg">
-                  <div class="media-body">
-                    <h6>8 Yrs Experience, H1B</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span> <span class="sap-badge">SAP FSCM</span>  <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>Balasubramanian <small> - Jr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img2.jpg">
-                  <div class="media-body">
-                    <h6>6+ Yrs Experience , L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>Sindhu Gangadharan <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img3.jpg">
-                  <div class="media-body">
-                    <h6>8+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP PM</span> <span class="sap-badge">SAP MM</span> <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="job-candidate-profile.html">
-                      <h5>James Robert <small> - Sr.Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> Resume</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)" class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> Mail</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img4.jpg">
-                  <div class="media-body">
-                    <h6>7+ Yrs Experience, L1</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span>  <span class="sap-badge">SAP Mobility</span>
-                      <span class="sap-badge">SAP FSCM</span> <span class="sap-badge">SAP QM</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        </div> -->
       </div>
 
       <!--Side Bar Section-->
